# agentic-neural-networks-teacher

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  OUTLINE.md  PLAN.md  PROJECTS.md  README.md  SKILL-LEVELS.md  SKILLS.md  pyproject.toml
.github/workflows/: ci.yml
agents/: README.md
app/agents/: hello_agent.py
app/agents/session/: __init__.py  assessor.py  critic.py  messages.py  orchestrator.py  planner.py  tutor.py
app/content/: __init__.py  backprop_module.py  repository.py  schema.py
app/tests/: test_code_runner.py  test_content_api.py  test_content_repository.py  test_hello_agent.py  test_math_service.py  test_session_orchestrator.py
app/tooling/code_runner/: models.py  runner.py
app/tooling/math/: checks.py  models.py
content/: README.md
eval/: README.md
infra/: README.md
scripts/: run_quality_checks.sh
services/api/: Dockerfile  README.md  main.py
services/code_runner/: main.py
services/math_service/: main.py
